<resources>
    <string name="app_name">eBay Catalog Search</string>
    <string name="keyword">Keyword</string>
    <string name="price_range">Price Range</string>
    <string name="condition">Condition</string>
    <string name="sort_by">Sort By</string>
    <string name="enter_keyword">Enter Keyword</string>
    <string name="validate_keyword">Please enter mandatory field</string>
    <string name="maximum_price">Maximum Price</string>
    <string name="minimum_price">Minimum Price</string>
    <string name="validate_price">Please enter valid price values</string>
    <string name="check_new">New</string>
    <string name="check_used">Used</string>
    <string name="check_unspecified">Unspecified</string>
    <string name="button_search">Search</string>
    <string name="button_clear">Clear</string>

    <string name="search_results">Search Results</string>
    <string name="searching_products">Searching Products…</string>
    <string name="searching_product_details">Searching Product Details…</string>
    <string name="no_records">No Records</string>
    <string name="showing">Showing</string>
    <string name="results_for">results for</string>
    <string name="item_imagedescription">Item Image</string>
    <string name="subtitle">Subtitle</string>
    <string name="brand">Brand</string>
    <string name="product_features">Product Features</string>
    <string name="specifications">Specifications</string>
    <string name="seller_information">Seller Information</string>
    <string name="return_policies">Return Policies</string>
    <string name="shipping_infomation">Shipping Information</string>
    <string name="product">PRODUCT</string>
    <string name="seller_info">SELLER INFO</string>
    <string name="shipping">SHIPPING</string>

    <string-array name="main_spinner_sort_by_display">
        <item>Best Match</item>
        <item>Price: Highest First</item>
        <item>Price + Shipping: Highest First</item>
        <item>Price + Shipping: Lowest First</item>
    </string-array>

    <string-array name="main_spinner_sort_by_real">
        <item>BestMatch</item>
        <item>CurrentPriceHighest</item>
        <item>PricePlusShippingHighest</item>
        <item>PricePlusShippingLowest</item>
    </string-array>

    <string name="test_text">Test Text</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>