<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="top">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        app:titleTextColor="@color/white">
        <TextView android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbartext"
            android:maxLines="1"
            android:ellipsize="end"/>
    </androidx.appcompat.widget.Toolbar>


    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/main_toolbar"
        android:paddingStart="@dimen/main_margin_vertical"
        android:paddingEnd="@dimen/main_margin_vertical"
        >

        <TextView
            android:id="@+id/main_textView_keyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_margin_vertical"
            android:textSize="@dimen/main_textview_text"
            android:text="@string/keyword" />
        <EditText
            android:id="@+id/main_editText_keyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"
            android:ems="10"
            android:textSize="@dimen/main_edittext_hint"
            android:hint="@string/enter_keyword"
            android:layout_below="@id/main_textView_keyword"
            />
        <TextView
            android:id="@+id/main_textView_validate_keyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_margin_vertical"
            android:textSize="@dimen/main_textview_text"
            android:text="@string/validate_keyword"
            android:textStyle="italic"
            android:visibility="gone"
            android:textColor="@color/red"
            android:layout_below="@id/main_editText_keyword"/>

        <TextView
            android:id="@+id/main_textView_price_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_margin_horizontal"
            android:textSize="@dimen/main_textview_text"
            android:text="@string/price_range"
            android:layout_below="@id/main_textView_validate_keyword"/>
        <LinearLayout
            android:id="@+id/main_layout_price_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/main_textView_price_range">
            <EditText
                android:id="@+id/main_editText_minimum_price"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:textSize="@dimen/main_edittext_hint"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/minimum_price" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/main_editText_maximum_price"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textSize="@dimen/main_edittext_hint"
                android:hint="@string/maximum_price" />
        </LinearLayout>
        <TextView
            android:id="@+id/main_textView_validate_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_margin_vertical"
            android:textSize="@dimen/main_textview_text"
            android:text="@string/validate_price"
            android:textStyle="italic"
            android:visibility="gone"
            android:textColor="@color/red"
            android:layout_below="@id/main_layout_price_range"/>

        <TextView
            android:id="@+id/main_textView_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_margin_horizontal"
            android:textSize="@dimen/main_textview_text"
            android:text="@string/condition"
            android:layout_below="@id/main_textView_validate_price"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_layout_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/main_margin_horizontal"
            android:layout_below="@id/main_textView_condition">
            <CheckBox
                android:id="@+id/main_checkbox_new"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="@dimen/main_edittext_hint"
                android:text="@string/check_new"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <CheckBox
                android:id="@+id/main_checkbox_used"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="@dimen/main_edittext_hint"
                android:text="@string/check_used"
                android:textStyle="italic"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/main_checkbox_new"
                app:layout_constraintEnd_toStartOf="@id/main_checkbox_unspecified"/>
            <CheckBox
                android:id="@+id/main_checkbox_unspecified"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="@dimen/main_edittext_hint"
                android:text="@string/check_unspecified"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/main_textView_sort_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_margin_horizontal"
            android:textSize="@dimen/main_textview_text"
            android:text="@string/sort_by"
            android:layout_below="@id/main_layout_checkbox"/>
        <Spinner
            android:id="@+id/main_spinner_sort_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_textView_sort_by"
            android:layout_marginTop="@dimen/main_margin_horizontal"/>

        <LinearLayout
            android:id="@+id/main_layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/main_margin_vertical"
            android:layout_below="@id/main_spinner_sort_by"
            style="?android:attr/buttonBarStyle">
            <Button
                android:id="@+id/main_button_search"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:textSize="@dimen/main_edittext_hint"
                android:text="@string/button_search"
                style="?android:attr/buttonStyleSmall"
                android:background="@color/blue"
                android:textColor="@color/white"
                android:height="@dimen/main_button_height"
                android:layout_marginEnd="@dimen/main_margin_horizontal"
                android:layout_marginStart="@dimen/main_margin_horizontal"/>
            <Button
                android:id="@+id/main_button_clear"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:background="@color/blue"
                android:textSize="@dimen/main_edittext_hint"
                android:textColor="@color/white"
                android:height="@dimen/main_button_height"
                style="?android:attr/buttonStyleSmall"
                android:text="@string/button_clear"
                android:layout_marginEnd="@dimen/main_margin_horizontal"/>
        </LinearLayout>



    </RelativeLayout>
</RelativeLayout>